--- a/styles.css
+++ b/styles.css
@@ -1562,6 +1562,7 @@ body {
   display: flex;
   align-items: center;
   cursor: pointer;
+  margin-right: 20px;
 }
 .profile-icon-container img {
   width: 40px;
